# xtv

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
client_lib/: Cargo.toml
client_lib/src/: channels.rs  devices.rs  lib.rs  oauth2.rs  recordings.rs  response.rs  search.rs  server.rs  utils.rs
client_lib/src/serde/: chrono_rfc2822.rs  mod.rs
ui/: Cargo.toml
ui/src/: main.rs
