[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client_lib = { path = "../client_lib" }
clap = { version = "4.4.10", features = ["derive"] }
itertools = "0.12.0"
tokio = { version = "1", features = ["full"] }
