[package]
name = "client_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
base64 = "0.21.5"
chrono = "0.4.22"
clap = { version = "4.4.10", features = ["derive"] }
convert_case = "0.6.0"
derive-getters = "0.3.0"
home = "0.5.3"
oauth2 = "4.2.3"
open = "5.0.1"
parking_lot = "0.12.1"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
toml = "0.8.8"
